--- a/j-server/src/main/resources/application.properties
+++ b/j-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.driver-class-name=${DRIVER}
-spring.datasource.url=${URL}
-spring.datasource.username=${USERNAME}
-spring.datasource.password= ${PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://postgres:5432/mtg_lounge
+spring.datasource.username=root
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
