--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
 .idea/
 .DS_Store
+
+### Database ###
+db-data/*
+
+j-server/target/
+j-server/!.mvn/wrapper/maven-wrapper.jar
+j-server/!**/src/main/**/target/
+j-server/!**/src/test/**/target/
+
+### STS ###
+j-server/.apt_generated
+j-server/.classpath
+j-server/.factorypath
+j-server/.project
+j-server/.settings
+j-server/.springBeans
+j-server/.sts4-cache
+
+### IntelliJ IDEA ###
+j-server/.idea
+j-server/*.iws
+j-server/*.iml
+j-server/*.ipr
+
+### NetBeans ###
+j-server/build/
+j-server/!**/src/main/**/build/
+j-server/!**/src/test/**/build/
