--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ db-data/
 j-server/target/
 j-server/ch/
 j-server/com/
+j-server/commons-codec/
 j-server/commons-io/
 j-server/io/
 j-server/jakarta/
