--- a/containers/development.yaml
+++ b/containers/development.yaml
@@ -14,7 +14,7 @@ services:
             POSTGRES_DB: mtg_lounge
 
     j-server:
-        image: maven
+        image: maven:3.9.9-amazoncorretto-17-debian
         depends_on:
             - pg-database
         volumes:
