--- a/j-server/src/main/resources/application.properties
+++ b/j-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://postgres:5432/mtg_lounge
+spring.datasource.url=jdbc:postgresql://containers-pg-database-1:5432/mtg_lounge
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
