--- a/containers/development.yaml
+++ b/containers/development.yaml
@@ -42,16 +42,16 @@ services:
 
     nginx:
         image: nginx
+        depends_on:
+            - j-server
+            - ts-client
         volumes:
-            - ./../container_data/templates:/etc/nginx/templates
+            - ./../nginx:/etc/nginx/templates/
         ports:
-            - "8080:8080"
             - "5173:5173"
-        environment:
-            - NGINX_HOST=localhost
-            - NGINX_PORT=80
         networks:
             - mtg-lounge
 
-  mtg-lounge:
-    driver: bridge
+networks:
+    mtg-lounge:
+        driver: bridge
