--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -4,6 +4,9 @@ server {
     server_name localhost;
     location / {
         proxy_pass  http://ts-client:5173;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
     location /api {
         proxy_pass  http://j-server:8080;
