--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ j-server/*.ipr
 j-server/build/
 j-server/!**/src/main/**/build/
 j-server/!**/src/test/**/build/
+
+### Cargo things
+backend-v1/target/
