--- a/backend-v1/Cargo.toml
+++ b/backend-v1/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "Lounge Collection Manager Backend"
+name = "mtg_lounge_collections"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.4"
+axum = "0.8.1"
 tokio = { version = "1.35.1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
