--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -12,6 +12,9 @@ server {
         proxy_pass  http://j-server:8080;
     }
     location /site {
-        proxy_pass  http://rs-server:8080;
+        proxy_pass  http://elm-frontend:80;
+    }
+    location /site/api {
+        proxy_pass  http://rs-server:80;
     }
 }
